# codex-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/skills/mcp-file-server/mcp-file-standards/: SKILL.md
.github/workflows/: deploy.yml  sync-codex-metadata.yml  validate-pr.yml
deployment/environements/: dev.env
deployment/environments/: dev.env
deployment/scripts/: generate_aca_configs.py
deployment/templates/: aca-template.yaml
math-server/: README.md  mcp_config.json
math-server/.codex/skills/math-server/: SKILL.md
math-server/src/math_server/: operations.py
math-server/src/math_server/__pycache__/: __init__.cpython-313.pyc.1581332263920  operations.cpython-313.pyc.1581332264064
math-server/tests/__pycache__/: test_operations.cpython-313-pytest-9.0.3.pyc.38760
mcp-file-server/: Dockerfile  mcp_config.json
mcp-file-server/src/mcp_file/: server.py  service.py
mcp-file-server/tests/: test_service.py
mcp-servers/math-server/: AGENTS.md  pyproject.toml
mcp-servers/math-server/src/math_server/: server.py
mcp-servers/math-server/tests/: test_operations.py
mcp-servers/mcp-file-server/: pyproject.toml
mcp-servers/mcp-file-server/src/mcp_file/: models.py  repository.py
mcp-servers/mcp-todo-server/: AGENTS.md
mcp-servers/mcp-todo-server/.codex/skills/mcp-todo-standards/: SKILL.md
mcp-servers/mcp-unit-converter/.codex/skills/mcp-unit-standards/: SKILL.md
mcp-servers/mcp-unit-converter/src/mcp_unit_converter/: conversions.py  server.py
mcp-todo-server/: AGENTS.md  Dockerfile  mcp_config.json
mcp-todo-server/src/mcp_todo/: exceptions.py  models.py  repository.py  server.py
mcp-todo-server/tests/: test_service.py
mcp-unit-converter/: AGENTS.md  Dockerfile  mcp_config.json  pyproject.toml
mcp-unit-converter/src/mcp_unit_converter/: __init__.py
mcp-unit-converter/tests/: test_conversions.py
scripts/: detect_changed_servers.py  generate_codex_metadata.py
src/mcp_file/: exceptions.py
src/mcp_todo/: service.py
