[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-file-server"
version = "0.1.0"
description = "MCP server for file system operations"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
mcp-file = "mcp_file.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_file"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
