[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-unit-converter"
version = "0.1.0"
description = "MCP server for unit conversion and measurement"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
mcp-unit-converter = "mcp_unit_converter.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_unit_converter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
