[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "math-server"
version = "0.1.0"
description = "Small MCP server for basic math operations"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
math-server = "math_server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/math_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
